<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.teletha</groupId>
	<artifactId>viewtify</artifactId>
	<version>2.28.0</version>
	<packaging>jar</packaging>
	<name>viewtify</name>
	<description>Viewtify provides an API for using [JavaFX](https://openjfx.io/) more declaratively and reactively. It also provides refactoring and type safety by eliminating FXML.

Declarative and Reactive API
* UI tree definition
* UI widget operations (support all built-in JavaFX widgets)
* Style definition (CSS API via [Stylist](https://github.com/teletha/stylist))
* Animation
* Dialog
* Context menu

Additional useful functions and widgets that do not exist in JavaFX.
* Application launcher
* Application updater
* Docking Tab
* Notification UI like Toast
* Calendar UI
* Print preview
* Monitorable task
* Undo/Redo management
* Focus management
* Shortcut management
* User preference
* Various theme
* Automatic translation in real time
* Tooltip and Popup
* Headless UI
* Browser manipulation</description>
	<dependencies>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>altfx</artifactId>
			<version>1.3.0</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>antibug</artifactId>
			<version>1.12.0</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>conjure</artifactId>
			<version>1.1.1</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.2.1</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>icymanipulator</artifactId>
			<version>1.5.0</version>
			<scope>provided</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>24-ea+5</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>24-ea+5</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>24-ea+5</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>24-ea+5</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>24-ea+5</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>lycoris</artifactId>
			<version>1.0.0</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>org.testfx</groupId>
			<artifactId>openjfx-monocle</artifactId>
			<version>jdk-12.0.1+2</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>psychopath</artifactId>
			<version>2.0.0</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>sinobu</artifactId>
			<version>4.2.0</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>stylist</artifactId>
			<version>1.10.0</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
	</dependencies>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
	<repositories>
		<repository>
			<id>Maven</id>
			<name>repo1.maven.org</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>JitPack</id>
			<name>jitpack.io</name>
			<url>https://jitpack.io/</url>
		</repository>
	</repositories>
	<url>https://github.com/teletha/viewtify</url>
	<scm>
		<url>https://github.com/teletha/viewtify</url>
		<connection>scm:git:https://github.com/teletha/viewtify.git</connection>
		<developerConnection>scm:git:https://github.com/teletha/viewtify.git</developerConnection>
	</scm>
	<issueManagement>
		<system>github</system>
		<url>https://github.com/teletha/viewtify/issues</url>
	</issueManagement>
	<developers>
		<developer>
			<name>teletha</name>
			<email/>
			<url>https://github.com/teletha</url>
		</developer>
	</developers>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
					<release>23</release>
					<compilerArgs/>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>